--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <footer>
-            <p>Created with ❤️ by Eduard Muradyan</p>
+            <p>Created with  by Eduard Muradyan</p>
         </footer>
     </div>
 </body>
